small changes I think

--- a/public/index.html
+++ b/public/index.html
@@ -13,16 +13,17 @@ shrink-to-fit=no">
   <body>
     <h1>NBA Team Creation</h1> 
     <div class="container"> 
-      <h3>Team</h3> <!-- Editable title for the team -->
-      <div class="grid"> 
+      <div class="container"> 
+        <h3>Team</h3> <!-- Editable title for the team -->
         <div class="grid-container">
           <!-- This is where the pictures/info will show up-->
-          <div>Point guard</div>
-          <div>Center</div>
-          <div>Shooting guard</div>
-          <div>Power forward</div>
-          <div>Small forward</div>
+          <div><a href="#center"> <img border="0" alt="" src="default-player.png"> </a></div>
+          <div><a href="#pointguard"> <img border="0" alt="" src="default-player.png"> </a></div>
+          <div><a href="#smallforward"> <img border="0" alt="" src="default-player.png"> </a></div>
+          <div><a href="#powerforward"> <img border="0" alt="" src="default-player.png"> </a></div>
+          <div><a href="shooting guard"> <img border="0" alt="" src="default-player.png"> </a></div>
         </div>
+        <!-- Have names/positions show up nicely aligned under each picture -->
       </div>
 
       <div class="container">
