--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,10 @@
           
       <div id="team1StatContainer">
         <div id="newTeam1PlayerStats">
+
           <div style="
-          border: 1px solid #DCDCDC;
-          box-shadow: 6px 6px 1px 0px #EBEBEB;
+          box-shadow: 3px 3px 1px 0px #EBEBEB;
+          background-image: url('cardBG.jpg');
           padding-right: .2em;
           padding-left: .7em;
           padding-bottom: .6em;
@@ -39,6 +40,7 @@
           text-align: center;
           display: inline-block;
           width: 210px;
+          height: 320px;
           margin-right: 20px ;
           ">
               <img src="https://d2cwpp38twqe55.cloudfront.net/req/201911262/images/players/jamesle01.jpg" style="
@@ -62,8 +64,8 @@
           </div>
 
           <div style="
-          border: 1px solid #DCDCDC;
-          box-shadow: 6px 6px 1px 0px #EBEBEB;
+          box-shadow: 3px 3px 1px 0px #EBEBEB;
+          background-image: url('cardBG.jpg');
           padding-right: .2em;
           padding-left: .7em;
           padding-bottom: .6em;
@@ -71,6 +73,7 @@
           text-align: center;
           display: inline-block;
           width: 210px;
+          height: 320px;
           margin-right: 20px ;
           ">
               <img src="https://d2cwpp38twqe55.cloudfront.net/req/201911262/images/players/jamesle01.jpg" style="
@@ -94,8 +97,8 @@
           </div>
 
           <div style="
-          border: 1px solid #DCDCDC;
-          box-shadow: 6px 6px 1px 0px #EBEBEB;
+          box-shadow: 3px 3px 1px 0px #EBEBEB;
+          background-image: url('cardBG.jpg');
           padding-right: .2em;
           padding-left: .7em;
           padding-bottom: .6em;
@@ -103,6 +106,7 @@
           text-align: center;
           display: inline-block;
           width: 210px;
+          height: 320px;
           margin-right: 20px ;
           ">
               <img src="https://d2cwpp38twqe55.cloudfront.net/req/201911262/images/players/jamesle01.jpg" style="
@@ -126,8 +130,8 @@
           </div>
 
           <div style="
-          border: 1px solid #DCDCDC;
-          box-shadow: 6px 6px 1px 0px #EBEBEB;
+          box-shadow: 3px 3px 1px 0px #EBEBEB;
+          background-image: url('cardBG.jpg');
           padding-right: .2em;
           padding-left: .7em;
           padding-bottom: .6em;
@@ -135,6 +139,7 @@
           text-align: center;
           display: inline-block;
           width: 210px;
+          height: 320px;
           margin-right: 20px ;
           ">
               <img src="https://d2cwpp38twqe55.cloudfront.net/req/201911262/images/players/jamesle01.jpg" style="
@@ -158,8 +163,8 @@
           </div>
 
           <div style="
-          border: 1px solid #DCDCDC;
-          box-shadow: 6px 6px 1px 0px #EBEBEB;
+          box-shadow: 3px 3px 1px 0px #EBEBEB;
+          background-image: url('cardBG.jpg');
           padding-right: .2em;
           padding-left: .7em;
           padding-bottom: .6em;
@@ -167,7 +172,8 @@
           text-align: center;
           display: inline-block;
           width: 210px;
-          margin-right: 20px;
+          height: 320px;
+          margin-right: 20px ;
           ">
               <img src="https://d2cwpp38twqe55.cloudfront.net/req/201911262/images/players/jamesle01.jpg" style="
               height: 150px;
@@ -176,26 +182,35 @@
               display:inline-block;
               border: 1px solid gray;
               ">
-              <h3 style ="font-size: 1vw; height: 40px;">Kareem Abdul-Jabar</h3>
-              <div>
+              <h3 style ="
+              font-size: 1vw;
+              height: 40px;
+              ">Lebron James  </h3>
+              <div style="
+              ">
               <p style="margin: 2px;"><span style="font-weight: bold;">Points</span>: 27.4 <span  style="font-weight: bold;">&rArr;</span> 26.1</p>
               <p style="margin: 2px;"><span style="font-weight: bold;">Assists</span>: 5.7 <span  style="font-weight: bold;">&rArr;</span> 4.6</p>
               <p style="margin: 2px;"><span style="font-weight: bold;">Rebounds</span>: 9.3 <span  style="font-weight: bold;">&rArr;</span> 8.5</p>
               <p style="margin: 2px;"><span style="font-weight: bold;">Usage Rate</span>: 42.3 <span  style="font-weight: bold;">&rArr;</span> 41.1</p>
               </div>
-            
           </div>
+
 
 
         </div>
       </div>
 
       <div id="team1Info" style="
-          background-color: red;
+          background-color: #214cce;
+          border-radius:50px ;
+          opacity: .9;
+          height: 100px;
+          width: 70%;
+          margin: auto;
           ">
-            <div id="team1Wins" style="width: 50%; float: left; display: inline;"> Projected Wins Per Season: </div>
-            <div id="team1Points" style="width: 50%; float: left; display: inline;">  Projected Points Per Game: </div>
-        </div>
+            <div id="team1Wins"   style="width: 50%; height: 100px; line-height: 100px; float: left; display: inline; text-align: center; font-size: 1.5vw; font-family: Arial, Helvetica, sans-serif; color: white"> Projected Wins Per 82 Game Season: </div>
+            <div id="team1Points" style="width: 50%; height: 100px; line-height: 100px; float: left; display: inline; text-align: center; font-size: 1.5vw; font-family: Arial, Helvetica, sans-serif; color: white">  Projected Points Per Game: </div>
+      </div>
 
 
     <div id="playerAddModal" class="modal">
